--- a/bricks/mcf_new/brick.yaml
+++ b/bricks/mcf_new/brick.yaml
@@ -3,7 +3,8 @@ description: Scaffolds a complete Mission-Critical Flutter project structure.
 version: 1.0.0
 environment:
   mason: ">=0.1.0 <0.2.0"
-
+# FIX: This line is required for BrickHub
+repository: https://github.com/LosPhilly/mcf_cli
 vars:
   project_name:
     type: string
